Fix: style when text wraps

--- a/component-library/components/sections/price-list/price-list.scss
+++ b/component-library/components/sections/price-list/price-list.scss
@@ -45,7 +45,8 @@
 
             &__item {
                 display: grid;
-                grid-template-columns: auto 1fr auto;
+                grid-template-columns: auto minmax(4rem, 1fr) auto;
+                align-items: end;
                 gap: 16px;
                 font-weight: var(--font-weight-body);
                 line-height: var(--line-height);
